tests/baselines/reference/exportAssignmentImportMergeNoCrash.errors.txt
user.ts(1,8): error TS2395: Individual declarations in merged declaration 'Obj' must be all exported or all local.
user.ts(1,8): error TS2440: Import declaration conflicts with local declaration of 'Obj'.
user.ts(3,14): error TS2395: Individual declarations in merged declaration 'Obj' must be all exported or all local.
user.ts(3,25): error TS2448: Block-scoped variable 'Obj' used before its declaration.


==== assignment.ts (0 errors) ====
    export default {
        foo: 12
    };
    
==== user.ts (4 errors) ====
    import Obj from "./assignment";
           ~~~
!!! error TS2395: Individual declarations in merged declaration 'Obj' must be all exported or all local.
           ~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'Obj'.
    
    export const Obj = void Obj;
                 ~~~
!!! error TS2395: Individual declarations in merged declaration 'Obj' must be all exported or all local.
                            ~~~
!!! error TS2448: Block-scoped variable 'Obj' used before its declaration.
!!! related TS2728 user.ts:3:14: 'Obj' is declared here.
    